<resources>
    <string name="app_name">Lesson-4.1.1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Save">Сохранить</string>
    <string name="use_gallery">Use gallery</string>
    <string name="s">fragment_gallery_use</string>
    <string name="title">Title</string>
    <string name="Title">Title</string>
    <string name="description">Description</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="editingTxtView">Edit</string>
    <string name="sorting">Sorting</string>
    <string name="writeName">Введите имя</string>
    <string name="EditName">Редактирование имени</string>
    <string name="DescForProfile1">UI/UX Designer | Front End Developer</string>
    <string name="about_jonathon"><u>About Gogol:)</u></string>
    <string name="_20_1_1809_12_1821">Родился 20 марта (1 апреля)1809 года в селе Сорочинцы Полтавской губернии в семье помещика.</string>
    <string name="follow">Follow</string>
    <string name="appriciation"><u>Appriciation</u></string>
    <string name="followers"><u>Followers</u></string>
    <string name="following"><u>Following</u></string>
    <string name="cont">Продолжить</string>
    <string name="verify">Подтвердить</string>
    <string name="enterYourPhone">Введите номер телефона</string>
    <string name="enterYourCode">Введите код</string>
    <string name="not_found">Ничего не найдено</string>
</resources>