<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.PhoneFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editPhoneForPhoneFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterYourPhone"
            android:inputType="phone"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/btnContinueForPhoneFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/cont" />

        <EditText
            android:id="@+id/editCodePhoneFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterYourCode"
            android:inputType="number"
            android:visibility="gone"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/btnCheckPhoneFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/verify"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>