<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lesson_411.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.lesson_411.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.lesson_411.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.example.lesson_411.ui.useGallery.GalleryUseFragment"
        android:label="@string/s"
        tools:layout="@layout/fragment_gallery_use" />
    <fragment
        android:id="@+id/noteFragment"
        android:name="com.example.lesson_411.ui.home.NoteFragment"
        android:label="fragment_note"
        tools:layout="@layout/fragment_note" />
    <fragment
        android:id="@+id/boardFragment"
        android:name="com.example.lesson_411.ui.onBoard.BoardFragment"
        android:label="fragment_board"
        tools:layout="@layout/fragment_board" />
</navigation>