<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:src="@mipmap/ic_launcher_round"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/txtTitleForBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/Title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtDescForBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/description"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btnStartForBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/start"
        android:textAllCaps="false" />
</LinearLayout>